--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,6 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^7.3.0
-  flutter_riverpod: ^0.14.0+3
-  hooks_riverpod: ^0.14.0+5
-  flutter_hooks: ^0.18.0
-  bloc: ^7.2.0
   equatable: ^2.0.3
   shared_preferences: ^2.0.7
   injector: ^2.0.0
@@ -47,10 +42,11 @@ dependencies:
   http: ^0.13.3
   flutter_secure_storage: ^4.2.1
   reactive_dropdown_search: ^0.2.1
-  sizer: ^2.0.15
   responsive_framework: ^0.1.4
-  string_validator: ^0.3.0
   url_launcher: ^6.0.12
+  #hook
+  hooks_riverpod: ^0.14.0+5
+  flutter_hooks: ^0.18.0
 
 dev_dependencies:
   flutter_test:
